servicio get conteo de servicios segun su estado
